Fix multiple warnings and deprecations in Fenster
- Remove unused import: ch.technokrat.gecko.GeckoExternal (line 18)
- Remove unused field: dateiEndung (line 90)
- Replace deprecated URL(URL, String) constructor with URI.resolve() approach (line 209)
- Replace all Event.CTRL_MASK with InputEvent.CTRL_MASK (13 occurrences)
- Add import for java.awt.event.InputEvent
- Uses modern API instead of blanket @SuppressWarnings

This is the proper solution that fixes the root cause instead of hiding warnings.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>